--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "flowbite": "^2.2.1",
     "ngx-echarts": "^17.1.0",
+    "ngx-intersection-observer": "^1.0.13",
     "ngx-progressbar": "^11.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
